seems to be mostly working but something is wrong with either overlap or basis set specification

--- a/scf/sequential/Makefile
+++ b/scf/sequential/Makefile
@@ -1,12 +1,23 @@
 
-scf:	scf.o input.o integ.o
-	$(CXX) -o $@ $^ -lm 
+CXXFLAGS = -g -O0 -Wall
 
-scf.o:	scfdata.h
+# Default lapack and blas ... broken on most linuxen
+#LIBS = -llapack -lblas -lgfortran -lm
+
+# MKL intel library with 64-bit integers and pointers
+LIBS = -L/opt/intel/mkl/10.0.1.014/lib/em64t -lmkl -lguide -lpthread -lm
+
+
+scf:	scf.o scfdata.o integ.o matrixutil.o
+	$(CXX) -o $@ $^ $(LIBS)
+
+scf.o:	scfdata.h matrixutil.h
 
 input.o:	scfdata.h integ.h
 
 integ.o:	integ.h
+
+matrixuil.o:	matrixutil.h
 
 clean:
 	/bin/rm -f scf *.o *~
