--- a/armci_examples/Makefile
+++ b/armci_examples/Makefile
@@ -127,7 +127,14 @@ endif
 #
 #############################################
 
-OBJECTS = driver.o simple_get.o simple_put.o overlap_b.o overlap_nb.o overlap_b_ring.o overlap_nb_ring.o getticks.o
+OBJECTS = driver.o simple_get.o simple_put.o overlap_b.o overlap_nb.o overlap_b_ring.o overlap_nb_ring.o
+
+ifeq ($(TARGET),BGP)
+  OBJECTS += getticks_bgp.o
+endif
+ifeq ($(TARGET),LINUX64)
+  OBJECTS += getticks_linux.o
+endif
 
 all: driver.x
 
