--- a/ga_examples/Makefile
+++ b/ga_examples/Makefile
@@ -1,6 +1,6 @@
 MY_ROOT=.
 #DEBUG=YES
-HPM_PROFILING=YES
+#HPM_PROFILING=YES
 
 #############################################
 #
@@ -90,14 +90,14 @@ ifeq ($(TARGET),BGP)
    MPI_INC=-I$(MPI_PREFIX)/include
    MPI_LIB=-L$(MPI_PREFIX)/lib -lfmpich_.cnk -lmpich.cnk -ldcmf.cnk -ldcmfcoll.cnk -lrt -L$(BGP_SYS)/runtime/SPI -lSPI.cna
 
-   GA_PREFIX=/home/jhammond/ga-4-2
-   GA_INC=-I$(GA_PREFIX)/include
-   //GA_LIB=-L$(GA_PREFIX)/lib/$(TARGET) -lglobal -lma -llinalg -larmci -ltcgmsg-mpi
-   GA_LIB=-L$(GA_PREFIX)/lib/$(TARGET) -lglobal -lma -larmci -ltcgmsg-mpi
+   GA_PREFIX=/home/projects/nwchem/ga-cvs-dev-i8
+   GA_INC=-I$(GA_PREFIX)/include -I$(GA_PREFIX)/armci/src
+   GA_LIB=-L$(GA_PREFIX)/lib/$(TARGET) -lglobal -lma -llinalg -larmci -ltcgmsg-mpi
+   //GA_LIB=-L$(GA_PREFIX)/lib/$(TARGET) -lglobal -lma -larmci -ltcgmsg-mpi
 
-   ESSL_PREFIX=/soft/apps/ESSL-4.4
-   ESSL_INC=-I$(ESSL_PREFIX)/include
-   ESSL_LIB=-L$(ESSL_PREFIX)/lib -lesslbg -lmass
+   #ESSL_PREFIX=/soft/apps/ESSL-4.4
+   #ESSL_INC=-I$(ESSL_PREFIX)/include
+   #ESSL_LIB=-L$(ESSL_PREFIX)/lib -lesslbg -lmass
 
    OMP=/opt/ibmcmp/xlsmp/bg/1.7/lib/libxlsmp.a
 
@@ -107,7 +107,7 @@ ifeq ($(TARGET),BGP)
    INC=-I$(MY_ROOT) $(GA_INC) $(MPI_INC) $(ESSL_INC)
 
    CC=$(MPI_PREFIX)/bin/mpixlc_r
-   COPT=-g -O5 -qarch=440d -qtune=440 -qthreaded
+   COPT=-g -O5 -qarch=450d -qtune=450 -qthreaded
    CFLAGS=$(INC) $(COPT) $(CDEF)
    CPP=$(CC) -E
    ifeq ($(DEBUG),YES)
@@ -120,7 +120,7 @@ ifeq ($(TARGET),BGP)
    endif
 
    LD=$(CC)
-   LFLAGS=-g -O3 -qarch=440d -qtune=440 -qthreaded
+   LFLAGS=-g -O3 -qarch=450d -qtune=450 -qthreaded
 
 endif
 
@@ -140,7 +140,7 @@ endif
 #
 #############################################
 
-OBJECTS = driver.o hello.o simple.o transpose.o matmul.o matmul2.o matvec.o gemm_test.o overlap.o
+OBJECTS = driver.o hello.o simple.o transpose.o matmul.o matmul2.o matvec.o gemm_test.o overlap.o ga_dgemm_test.o bigtest.o
 
 ifeq ($(TARGET),BGP)
   OBJECTS += getticks_bgp.o
